--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,8 +8,8 @@
       "args": [],
       "stopAtEntry": false,
       "externalConsole": false,
-      "cwd": "/media/nusal/New Volume/uni sem-7/parallel and concurrent/lab_1_c/lab1_parellel_programming",
-      "program": "/media/nusal/New Volume/uni sem-7/parallel and concurrent/lab_1_c/lab1_parellel_programming/build/Debug/outDebug",
+      "cwd": "/media/nusal/New Volume1/uni sem-7/parallel and concurrent/lab_1_c/lab1_parellel_programming",
+      "program": "/media/nusal/New Volume1/uni sem-7/parallel and concurrent/lab_1_c/lab1_parellel_programming/build/Debug/outDebug",
       "MIMode": "gdb",
       "miDebuggerPath": "gdb",
       "setupCommands": [
